--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,28 +13,51 @@ collections:
         file: "data/profile.yml" # Path to your appearance YAML file
         fields:
           - { name: "company_name", label: "Company Name", widget: "string", required: false }
-          - { name: "branding_favicon", label: "Favicon", widget: "image", required: false }
-          - { name: "branding_logo_width", label: "Logo Width", widget: "number", required: false }
           - label: "Contact Information"
             name: "contact_information"
             widget: "object"
             summary: '{{fields.name}}: {{fields.birthdate}}'
             fields:
-              - {label: "Public", name: "public", widget: "boolean", default: true}
-              - {label: "Name", name: "name", widget: "string"}
-              - label: "Birthdate"
-                name: "birthdate"
-                widget: "date"
-                default: ""
-                format: "MM/DD/YYYY"
               - label: "Address"
                 name: "address"
                 widget: "object"
                 collapsed: true
                 fields: 
-                  - {label: "Street Address", name: "street", widget: "string"}
-                  - {label: "City", name: "city", widget: "string"}
-                  - {label: "Postal Code", name: "post-code", widget: "string"}
+                  - {label: "Street Address", name: "street", widget: "string", required: false}
+                  - {label: "City", name: "city", widget: "string", required: false}
+                  - {label: "Postal Code", name: "post-code", widget: "string", required: false}
+              - label: "Contact"
+                name: "contact"
+                widget: "object"
+                collapsed: true
+                fields: 
+                  - {label: "Direct Number", name: "direct", widget: "string", required: false}
+                  - {label: "Office Number", name: "office", widget: "string", required: false}
+                  - {label: "email", name: "email", widget: "string", required: false}
+              - label: "Social"
+                name: "social"
+                widget: "object"
+                collapsed: true
+                fields: 
+                  - {label: "Google Business Profile", name: "google_business_profile", widget: "string", required: false}
+                  - {label: "Facebook", name: "facebook", widget: "string", required: false}
+                  - {label: "X", name: "x", widget: "string", required: false}
+                  - {label: "LinkedIn", name: "linkedin", widget: "string", required: false}
+                  - {label: "Instagram", name: "instagram", widget: "string", required: false}
+                  - {label: "Pinterest", name: "pinterest", widget: "string", required: false}
+                  - {label: "YouTube", name: "youtube", widget: "string", required: false}
+                  - {label: "TikTok", name: "tiktok", widget: "string", required: false}
+                  - {label: "Snapchat", name: "snapchat", widget: "string", required: false}
+                  - {label: "WhatsApp", name: "whatsapp", widget: "string", required: false}
+                  - {label: "Zillow", name: "zillow", widget: "string", required: false}
+                  - {label: "Realtor", name: "realtor", widget: "string", required: false}
+              - label: "Search Engine Optimization"
+                name: "seo"
+                widget: "object"
+                collapsed: true
+                fields: 
+                  - {label: "Title Tag", name: "title_tag", widget: "string", required: false}
+                  - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
       - file: data/settings.yml
         label: Navigation
         name: navigation
