--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -100,6 +100,7 @@ collections:
           - { name: "colors_primary_button_background_color", label: "Primary Button Background Color", widget: "color", required: false }
           - { name: "colors_primary_button_text_color", label: "Primary Button Text Color", widget: "color", required: false }
           - { name: "colors_accent", label: "Accent Color", widget: "color", required: false }
+          - { name: "Banner Image", label: "banner_image", widget: "image", required: false }
       - name: "data_branding" # This is the file name without the extension
         label: "Branding" # Label for the file in the CMS
         file: "data/branding.yml" # Path to your appearance YAML file
