--- a/data/appearance.yml
+++ b/data/appearance.yml
@@ -3,4 +3,4 @@ header_header_background_color: "#e7e7e7"
 colors_primary_button_background_color: "#0893be"
 colors_primary_button_text_color: "#ffffff"
 colors_accent: "#b90606"
-Banner Image: /images/uploads/2-wyndam-selects-1-.jpg
+banner_image: /images/uploads/2-wyndam-selects-1-.jpg
