--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -240,6 +240,18 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Image Alt Tag", name: "alt_tag", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+
+# LEGAL
+  - name: "legal" # Used in routes, e.g., /admin/collections/blog
+    label: "Legal" # Used in the UI
+    folder: "/content/legal" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g.,
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Update Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
 
 # TEAM
