Update Appearance “footer”

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -1,3 +1,13 @@
-footer_background_color: '#000'
-footer_heading_color: '#fff'
-footer_text_color: '#fff'
+footer_logo: https://www.1stindependencerealty.com/uploads/1st-independence.png
+footer_background: /images/uploads/2-wyndam-selects-1-.jpg
+footer_background_color: "#000"
+footer_heading_color: "#fff"
+footer_text_color: "#fff"
+about: "BRe #234234234"
+disclaimer: The data and information contained within this website are for
+  informational purposes. We try our best to keep all information up-to-date but
+  encourage visitors to do their own research to determine the accuracy of
+  material available on this website. While we strive to keep the information
+  accurate, we do not warrant the accuracy or completeness of the information,
+  text, graphics, links, or other items contained within these materials. Please
+  visit our full disclaimer for more information!
