--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -211,6 +211,22 @@ collections:
                   - {label: "Body", name: "body", widget: "markdown", required: false}
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Blog Section"
+                name: "blog_section"
+                widget: "object"
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Text and Form Section"
+                name: "text_and_form"
+                widget: "object"
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Form Body", name: "form_body", widget: "markdown", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Form Background Color", name: "form_background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
               - label: "Text and Image"
                 name: "text-and-image"
                 widget: "object"
