--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -227,6 +227,27 @@ collections:
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Form Background Color", name: "form_background_color", widget: "color", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Quick Search"
+                name: "quick_search_idx"
+                widget: "object"
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Featured Listings IDX"
+                name: "featured_listings_idx"
+                widget: "object"
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Featured Listings Carousel IDX"
+                name: "featured_gallery_idx"
+                widget: "object"
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Background Color", name: "background_color", widget: "color", required: false}
+                  - {label: "Body Color", name: "body_color", widget: "color", required: false}
               - label: "Text and Image"
                 name: "text-and-image"
                 widget: "object"
