--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -284,6 +284,174 @@ collections:
                     name: "body_text_color"
                     widget: "color"
                     required: false
+
+
+# CONTENT PAGES
+  - name: "pages"
+    label: "Pages" # Used in the UI
+    folder: "/content/" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields:
+      - label: "Page Builder"
+        name: "page_builder"
+        widget: "list"
+        sortable: true
+        types:
+          - label: "Hero"
+            name: "hero"
+            widget: "object"
+            fields:
+              - label: "Heading"
+                name: "heading"
+                widget: "string"
+                required: false
+              - label: "Body"
+                name: "body"
+                widget: "markdown"
+                required: false
+              - label: "Button"
+                name: "button"
+                widget: "string"
+                required: false
+              - label: "Button Link"
+                name: "button_link"
+                widget: "string"
+                required: false
+              - label: "Overlay Color"
+                name: "overlayColor"
+                widget: "color"
+                required: false
+                enableAlpha: true
+              - label: "Heading Color"
+                name: "headingColor"
+                widget: "color"
+              - label: "Body Color"
+                name: "bodyColor"
+                widget: "color"
+                required: false
+              - label: "Image"
+                name: "image"
+                widget: "image"
+                required: false
+          - label: "Featured Grid"
+            name: "featured_grid"
+            widget: "list"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int, required: false}
+              - {label: "Background Image", name: "background_image", widget: "image", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Featured Blocks"
+                name: "featured_blocks"
+                widget: "list"
+                allow_add: true
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Image", name: "image", widget: "image", required: false}
+                  - {label: "Button Text", name: "button", widget: "string", required: false}
+                  - {label: "Button Link", name: "button_link", widget: "string", required: false}
+          - label: "Featured Panel"
+            name: "featured_Panel"
+            widget: "list"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Enable Slider", name: "slider", widget: "boolean", required: false}
+              - {label: "Column Number", name: "column_number", widget: "number", min: 2, max: 4, value_type: int, required: false}
+              - {label: "Background Image", name: "background_image", widget: "image", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+              - label: "Featured Blocks"
+                name: "featured_blocks"
+                widget: "list"
+                allow_add: true
+                fields:
+                  - {label: "Body", name: "body", widget: "markdown", required: false}
+                  - {label: "Image", name: "image", widget: "image", required: false}
+                  - {label: "Button Text", name: "button", widget: "string", required: false}
+                  - {label: "Button Link", name: "button_link", widget: "string", required: false}
+          - label: "Team Section"
+            name: "team_section"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Blog Section"
+            name: "blog_section"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Text and Form Section"
+            name: "text_and_form"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Form Body", name: "form_body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Form Background Color", name: "form_background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Quick Search"
+            name: "quick_search_idx"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Featured Listings IDX"
+            name: "featured_listings_idx"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Featured Listings Carousel IDX"
+            name: "featured_gallery_idx"
+            widget: "object"
+            fields:
+              - {label: "Body", name: "body", widget: "markdown", required: false}
+              - {label: "Background Color", name: "background_color", widget: "color", required: false}
+              - {label: "Body Color", name: "body_color", widget: "color", required: false}
+          - label: "Text and Image"
+            name: "text-and-image"
+            widget: "object"
+            fields:
+              - label: "Reverse Column"
+                name: "reverse_column"
+                widget: "boolean"
+                required: false
+              - label: "Body"
+                name: "body"
+                widget: "markdown"
+                required: false
+              - label: "Button"
+                name: "button"
+                widget: "string"
+                required: false
+              - label: "Button Link"
+                name: "button_link"
+                widget: "string"
+                required: false
+              - label: "Image"
+                name: "image"
+                widget: "image"
+                required: false
+              - label: "Background Image"
+                name: "background_image"
+                widget: "image"
+                required: false
+              - label: "Background Color"
+                name: "background_color"
+                widget: "color"
+                required: false
+              - label: "Body Text Color"
+                name: "body_text_color"
+                widget: "color"
+                required: false
+
 # BLOG
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
