--- a/data/footer.yml
+++ b/data/footer.yml
@@ -4,10 +4,10 @@ footer_background_color: "#966969"
 footer_heading_color: "#fff"
 footer_text_color: "#fff"
 about: "BRe #234234234"
-disclaimer: The data and information contained within this website are for
-  informational purposes. We try our best to keep all information up-to-date but
-  encourage visitors to do their own research to determine the accuracy of
-  material available on this website. While we strive to keep the information
-  accurate, we do not warrant the accuracy or completeness of the information,
-  text, graphics, links, or other items contained within these materials. Please
-  visit our full disclaimer for more information!
+disclaimer: The content and data provided on this website are intended for
+  informational purposes only. While we make every effort to ensure its accuracy
+  and currency, we encourage our visitors to independently verify the
+  information. We cannot guarantee the accuracy or comprehensiveness of the
+  materials, including text, graphics, links, or other items contained herein.
+  For a more detailed explanation, please refer to our comprehensive disclaimer.
+  Your understanding is greatly appreciated.
