Update Appearance “footer”

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -12,3 +12,6 @@ disclaimer: The content and data provided on this website are intended for
   materials, including text, graphics, links, or other items contained herein.
   For a more detailed explanation, please refer to our comprehensive disclaimer.
   Your understanding is greatly appreciated.
+enable_realtor_logo: true
+enable_equal_housing_logo: true
+enable_mls_logo: true
