--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -109,7 +109,7 @@ collections:
           - { name: "colors_primary_button_text_color", label: "Primary Button Text Color", widget: "color", required: false }
           - { name: "colors_accent", label: "Accent Color", widget: "color", required: false }
           - { name: "banner_image_overlay", label: "Banner Image Overlay", widget: "color", required: false }
-          - { name: "banner_image", label: "Banner Image", widget: "image", required: false }
+          - { name: "banner_image", label: "Banner Image", widget: "image", required: false, enableAlpha: true }
       - name: "data_branding" # This is the file name without the extension
         label: "Branding" # Label for the file in the CMS
         file: "data/branding.yml" # Path to your appearance YAML file
