--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -98,6 +98,14 @@ collections:
                 fields:
                   - { label: Label, name: label, widget: string }
                   - { label: Path, name: path, widget: string }
+          - label: Call to Action Text
+            name: call_to_action_text
+            widget: string,
+            required: false
+          - label: Call to Action Link
+            name: call_to_action_link
+            widget: string
+            required: false
   - name: "appearance" # This is the collection name
     label: "Appearance" # This is the label shown in the CMS
     files:
