--- a/data/settings.yml
+++ b/data/settings.yml
@@ -19,3 +19,5 @@ nav_items:
     path: /contact
   - label: Sitemap
     path: /sitemap
+call_to_action_text: Search Homes
+call_to_action_link: /search
