--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -536,3 +536,13 @@ collections:
           - {label: "Direct Number", name: "direct", widget: "string", required: false}
           - {label: "Office Number", name: "office", widget: "string", required: false}
           - {label: "email", name: "email", widget: "string", required: false}
+
+# TESTIMONIALS
+  - name: "Testimonials" # Used in routes, e.g., /admin/collections/blog
+    label: "testimonials" # Used in the UI
+    folder: "/content/testimonials" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g.,
+    fields: # The fields for each document, usually in front matter
+      - {label: "Name", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
