--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -545,4 +545,5 @@ collections:
     slug: "{{slug}}" # Filename template, e.g.,
     fields: # The fields for each document, usually in front matter
       - {label: "Name", name: "title", widget: "string"}
+      - {label: "Image", name: "image", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
