--- a/data/footer.yml
+++ b/data/footer.yml
@@ -1,4 +1,5 @@
 footer_logo: https://www.1stindependencerealty.com/uploads/1st-independence.png
+logo_width: 200
 footer_background: /images/uploads/2-wyndam-selects-1-.jpg
 footer_overlay: rgba(0, 0, 0, 0.72)
 footer_background_color: "#966969"
