--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,6 @@ collections:
           - label: "Contact Information"
             name: "contact_information"
             widget: "object"
-            summary: '{{fields.name}}: {{fields.birthdate}}'
             fields:
               - label: "Address"
                 name: "address"
@@ -65,6 +64,7 @@ collections:
                 fields: 
                   - {label: "Custom Scripts in Head", name: "head_custom_script", widget: "text", required: false}
                   - {label: "Custom CSS in Head", name: "head_custom_css", widget: "text", required: false}
+                  - {label: "Custom Code in Body", name: "body_custom_code", widget: "text", required: false}
       - file: data/settings.yml
         label: Navigation
         name: navigation
