--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,14 +57,14 @@ collections:
                 fields: 
                   - {label: "Title Tag", name: "title_tag", widget: "string", required: false}
                   - {label: "Meta Description", name: "meta_description", widget: "text", required: false}
-              - label: "Custom Code"
-                name: "custom_code"
-                widget: "object"
-                collapsed: true
-                fields: 
-                  - {label: "Custom Scripts in Head", name: "head_custom_script", widget: "text", required: false}
-                  - {label: "Custom CSS in Head", name: "head_custom_css", widget: "text", required: false}
-                  - {label: "Custom Code in Body", name: "body_custom_code", widget: "text", required: false}
+      - file: data/code.yml
+        label: Custom Code
+        name: custom_code
+        fields:
+          - {label: "Custom Scripts in Head", name: "head_custom_script", widget: "text", required: false}
+          - {label: "Custom CSS in Head", name: "head_custom_css", widget: "text", required: false}
+          - {label: "Custom Code in Body", name: "body_custom_code", widget: "text", required: false}
+
       - file: data/settings.yml
         label: Navigation
         name: navigation
