--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -2,4 +2,24 @@ top_header_color: "#000000"
 top_header_text_color: "#9e3737"
 header_color: "#927777"
 header_text_color: "#c6c6c6"
-nav_items: []
+nav_items:
+  - sub_items: []
+    label: Home
+    path: /
+  - label: Resources
+    sub_items:
+      - label: Blog
+        path: /blog
+      - label: Team
+        path: /team
+      - label: Legal
+        path: /legal
+    path: /
+  - label: Contact
+    path: /contact
+  - label: Sitemap
+    path: /sitemap
+  - label: Office
+    path: /office
+call_to_action_text: Search Homes
+call_to_action_link: /search
