--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -511,6 +511,7 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Image Alt Tag", name: "alt_tag", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Is Post", name: "is_post", widget: "boolean", default: true, required: false}
 
 # LEGAL
   - name: "legal" # Used in routes, e.g., /admin/collections/blog
