--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -2,7 +2,7 @@ top_header_color: "#000000"
 top_header_text_color: "#9e3737"
 header_color: "#f1f1f1"
 header_text_color: "#000000"
-mobile_icon_color: "#fefefe"
+mobile_icon_color: "#000"
 nav_items:
   - sub_items: []
     label: Home
