--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -258,6 +258,7 @@ collections:
                 fields:
                   - {label: "Body", name: "body", widget: "markdown", required: false}
                   - {label: "Form Body", name: "form_body", widget: "markdown", required: false}
+                  - {label: "Enable IDX Form", name: "enable_idx_form", widget: "boolean", required: false}
                   - {label: "Background Color", name: "background_color", widget: "color", required: false}
                   - {label: "Form Background Color", name: "form_background_color", widget: "color", required: false}
                   - {label: "Body Color", name: "body_color", widget: "color", required: false}
