--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
 baseURL = 'https://not-nextjs-framework.netlify.app'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+disableKinds = ["tags", "category", "RSS"]
