--- a/data/appearance.yml
+++ b/data/appearance.yml
@@ -1,7 +1,7 @@
 header_top_header_color: "#171414"
 header_header_background_color: "#e7e7e7"
-colors_primary_button_background_color: "#0893be"
+colors_primary_button_background_color: "#0476c9"
 colors_primary_button_text_color: "#ffffff"
-colors_accent: "#b90606"
+colors_accent: "#0476c9"
 banner_image_overlay: rgba(0, 0, 0, 0.76)
 banner_image: /images/uploads/2-wyndam-selects-1-.jpg
