--- a/data/profile.yml
+++ b/data/profile.yml
@@ -9,16 +9,16 @@ contact_information:
     direct: 951-454-2650
     office: 657-640-3455
   social:
-    snapchat: https://snapchat.com
+    snapchat: ""
     youtube: https://youtube.com
     facebook: https://facebook.com
-    whatsapp: https://whatsapp.com
+    whatsapp: ""
     instagram: https://instagram.com
     zillow: https://zillow.com
-    x: https://twitter.com
+    x: ""
     realtor: https://realtor.com
     tiktok: https://tiktok.com
-    pinterest: https://pinterest.com
+    pinterest: ""
     linkedin: https://linkedin.com
   seo:
     title_tag: My website is awesome
