--- a/data/footer.yml
+++ b/data/footer.yml
@@ -1,7 +1,7 @@
 footer_logo: /images/uploads/re-logo.png
 logo_width: 100
-footer_background: ""
-footer_overlay: ""
+footer_background: /images/uploads/clean-living-room_b3bubn.jpg
+footer_overlay: rgba(0, 0, 0, 0.88)
 footer_background_color: "#1e1e1e"
 footer_heading_color: "#fff"
 footer_text_color: "#fff"
